fix the navbar overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,8 +60,8 @@ a {
 }
 
 #signin {
-  margin-right: 20px;
-  font-size: 18px;
+  margin-right: 16px;
+  font-size: 14px;
   font-weight: 600;
   position: relative;
   bottom: 10px;
